# a2a-git-samples

./: README.md  pyproject.toml  sample.md
no_library/middleware/: content_filter_middleware.py
no_library/remote_agents/: currency_agent.py  weather_agent.py
no_library/remote_agents/common/: adapter.py  agent_executor.py
no_library/supervisor_agent/: __main__.py  a2a_client.py
with_library/: 01_remote_agent.py  02_remote_agent.py  03_remote_agent.py  04_remote_agent.py  client.py
